--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -1,63 +1,7 @@
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-    <title>Mass Gadgets</title>
-</head>
-
+{% extends "./base.html" %}
 <body>
-  <!-- Navigation -->
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light container-fluid">
-        <div class="container-fluid">
-            <img src="https://cdn.pixabay.com/photo/2016/12/19/08/39/mobile-phone-1917737_960_720.jpg" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
-            Mass
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Shop
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">All Products</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Laptops</a></li>
-                  <li><a class="dropdown-item" href="#">Mobile Phones</a></li>
-                </ul>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-
-            <button class="btn btn-primary ms-3">
-              <i class="fa fa-shopping-cart"></i>
-            </button>
-            <button type="button" class="btn btn-outline-default btn-lg">
-                <i class="fa fa-user-circle"></i>
-              </button>
-          
-          </div>
-        </div>
-      </nav>
-
+    {% block content %}
       <!-- Hero -->
       <div class="container-fluid">
           <img class="img-responsive" height="75%" width="100%" src="https://wallpaperaccess.com/full/1808551.jpg" alt="Gadgets">
@@ -88,12 +32,7 @@
       </div>
       <hr>
 
-      <!-- Footer -->
-      <footer class="container">
-        <p class="text-center">
-          Copyrights &copy; 2022
-        </p>
-      </footer>
+    {% endblock %}
 </body>
 
 </html>
