--- a/shop/templates/signup.html
+++ b/shop/templates/signup.html
@@ -1,42 +1,68 @@
-<html lang="en">
+{% extends "./base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    
+    {% block content %}
+    <!-- Signup Content -->
+    <div class="container bg-light">
 
-    <title>Sign Up</title>
-</head>
+        <!-- Title -->
+        <div class="row m-3 p-3">
+            <div class="col bg-dark ">
+                <h3 class="text-center">Create Account</h3>
+            </div>
+        </div>
 
-<body>
-    <div class="container">
-        <h3 class="text-center">Create Your Account</h3>
-        <form action="/signup/" method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" name="username" id="username" placeholder="Enter Username">
+        <!-- Content -->
+        <div class="row m-3 p-3">
+
+            <!-- Form -->
+            <div class="col bg-light">
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmPassword">Confirm Password</label>
+                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password">
+                    </div>
+                    <br>
+                    <div class="form-group text-center">
+                        <button type="submit" class="btn btn-primary text-center">Submit</button>
+                        <br>
+                        <a href="#" class="fst-italic">Already have an account?</a>
+                    </div>
+                </form>
+
             </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" name="email" id="email" placeholder="Enter Email">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" name="password" id="password" placeholder="Enter Password">
-            </div>
-            <div class="form-group">
-                <label for="confirm_password">Confirm Password</label>
-                <input type="password" class="form-control" name="confirmPassword" id="confirmPassword"
-                    placeholder="Confirm Password">
-            </div>
-            <button type="submit" class="btn btn-primary">Sign Up</button>
-        </form>
+        
+            <!-- Image -->
+            <div class="col bg-light">
+                <img src="https://colorlib.com/etc/regform/colorlib-regform-7/images/signup-image.jpg" alt="laptops" class="rounded mx-auto d-block">
+            </div>    
+        </div>
     </div>
-</body>
 
-</html>
+    <!-- Errors -->
+        <div class="container alert-danger text-start">
+                {% if errors %}
+                    <div class="container-fluid">
+                        <h6>Please rectify following errors</h6>
+                        <ul>
+                            {% for error in errors %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
+        </div>
+    {% endblock %}
