chore: shopping page added

--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <title>{{pageTitle}}</title>
+
+    <style>
+      .card-img-top{
+        width: 100%;
+        height: 15vw;
+        object-fit: contain;
+      }
+    </style>
 </head>
 
 <body>
