chore: User login and Profile edit

--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -22,17 +22,16 @@
 <body>
   <!-- Navigation -->
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-red-500 container-fluid">
     <div class="container-fluid">
-        <img src="https://cdn.pixabay.com/photo/2016/12/19/08/39/mobile-phone-1917737_960_720.jpg" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
-        Mass
+        <img src="https://c8.alamy.com/comp/2C195PA/online-shop-logo-design-vector-illustrtaion-mobile-online-shopping-logo-vector-template-2C195PA.jpg" alt="logo" width="50" height="50" class="d-inline-block align-text-top">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About Us</a>
