--- a/shop/templates/login.html
+++ b/shop/templates/login.html
@@ -3,26 +3,28 @@
     
     {% block content %}
     <!-- Signup Content -->
-    <div class="container">
+    <div class="container bg-light">
 
         <!-- Title -->
         <div class="row m-3 p-3">
-            <div class="col">
-                <h3 class="text-center">Create Account</h3>
+            <div class="col ">
+                <h3 class="text-center text-info">Please Sign In</h3>
             </div>
         </div>
 
         <!-- Content -->
         <div class="row m-3 p-3">
 
+            <!-- Image -->
+            <div class="col bg-light">
+                <img src="https://colorlib.com/etc/regform/colorlib-regform-7/images/signup-image.jpg" alt="laptops" class="rounded mx-auto d-block">
+            </div>    
+
             <!-- Form -->
             <div class="col bg-light">
                 <form action="" method="post">
                     {% csrf_token %}
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
-                    </div>
+
                     <div class="form-group">
                         <label for="email">Email address</label>
                         <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
@@ -30,10 +32,6 @@
                     <div class="form-group">
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <label for="confirmPassword">Confirm Password</label>
-                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password">
                     </div>
                     <br>
                     <div class="form-group text-center">
@@ -45,10 +43,6 @@
 
             </div>
         
-            <!-- Image -->
-            <div class="col bg-light">
-                <img src="https://colorlib.com/etc/regform/colorlib-regform-7/images/signin-image.jpg" alt="laptops" class="rounded mx-auto d-block">
-            </div>    
         </div>
     </div>
 
